--- a/ToyBox/Localization/en_lang.json
+++ b/ToyBox/Localization/en_lang.json
@@ -895,6 +895,10 @@
     "Original": "Default Description",
     "Translated": null
   },
+  "ToyBox_Features_FeatureSearch_FeatureSearchFeature_m_FilterForUntestedFeaturesLocalizedText": {
+    "Original": "Filter for untested features",
+    "Translated": null
+  },
   "ToyBox_Features_FeatureSearch_FeatureSearchTab_Name": {
     "Original": "Feature Search",
     "Translated": null
